--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </header>
         <section class="gallery">
             <div class="gallery-sort">
-                <input list="filters" type="text" class="search" oninput="onFilterBy(this)"
+                <input list="filters" type="text" class="search" oninput="onFilterBy(this,event)"
                     placeholder="search something">
                 <button type="button" class="random-btn" onclick="onRenderRandomMeme()">I`m Flexible</button>
                 <div class="common-words"></div>
