improved styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1 class="full">Meme Generator</h1>
             <nav class="main-nav full">
                 <ul class="clean-list">
-                    <li><a href="#" onclick="changeDisplay('gallery')">gallery</a></li>
-                    <li><a href="#" onclick="changeDisplay('memes')">Memes</a></li>
+                    <li><a href="#" class="gallery-link" onclick="changeDisplay('gallery')">gallery</a></li>
+                    <li><a href="#" class="memes-link" onclick="changeDisplay('memes')">Memes</a></li>
                 </ul>
             </nav>
         </header>
@@ -42,56 +42,55 @@
             <aside class="control-box">
                 <input type="text" class="text" oninput="onSetLineText()">
                 <div class="manage-rows">
-                    <button type="button" onclick="onMoveLine(-50)"><img class="btnImg"
+                    <button type="button" title="up line" onclick="onMoveLine(-50)"><img class="btnImg"
                             src="css/imgs/icons/up-arrow.png"></button>
-                    <button type="button" onclick="onMoveLine(50)"><img class="btnImg"
+                    <button type="button" title="down line" onclick="onMoveLine(50)"><img class="btnImg"
                             src="css/imgs/icons/down-arrow.png"></button>
-                    <button type="button" onclick="onSetLineFocus('normal')"><img class="btnImg"
+                    <button type="button" title="change line focus" onclick="onSetLineFocus('normal')"><img class="btnImg"
                             src="css/imgs/icons/up-down.png"></button>
-                    <button type="button" onclick="onAddLine()"><img class="btnImg"
+                    <button type="button" title="add line" onclick="onAddLine()"><img class="btnImg"
                             src="css/imgs/icons/plus.png"></button>
-                    <button type="button" onclick="onDeleteLine()"><img class="btnImg"
+                    <button type="button" title="delete line" onclick="onDeleteLine()"><img class="btnImg"
                             src="css/imgs/icons/delete.png"></button>
                 </div>
                 <div class="text-manipulation">
-                    <button type="button" onclick="onSetLineSize(2)"><img class="btnImg"
+                    <button type="button" title="enlarge line" onclick="onSetLineSize(2)"><img class="btnImg"
                             src="css/imgs/icons/enlarge.png"></button>
-                    <button type="button" onclick="onSetLineSize(-2)"><img class="btnImg"
+                    <button type="button" title="reduce line" onclick="onSetLineSize(-2)"><img class="btnImg"
                             src="css/imgs/icons/reduce.png"></button>
-                    <button type="button" onclick="onSetTextAlign('left')"><img class="btnImg"
+                    <button type="button" title="align line" onclick="onSetTextAlign('left')"><img class="btnImg"
                             src="css/imgs/icons/align-left.png"></button>
-                    <button type="button" onclick="onSetTextAlign('center')"><img class="btnImg"
+                    <button type="button" title="align line" onclick="onSetTextAlign('center')"><img class="btnImg"
                             src="css/imgs/icons/align-center.png"></button>
-                    <button type="button" onclick="onSetTextAlign('right')"><img class="btnImg"
+                    <button type="button" title="align line" onclick="onSetTextAlign('right')"><img class="btnImg"
                             src="css/imgs/icons/align-right.png"></button>
-                    <select onchange="onSetLineFont(this.value)" class="selector">
+                    <select  title="set line font" onchange="onSetLineFont(this.value)" class="selector">
                         <option>Impact</option>
                         <option>Arial</option>
                         <option>Fredoka</option>
                     </select>
-                    <button class="pallete-holder">
+                    <button title="change font bg color" class="pallete-holder">
                         <img class="btnImg" src="css/imgs/icons/color-palette.png">
-                        <input type="color" class="textBgColor pallete" onchange="onSetLineBgColor()">
+                        <input type="color" class="textBgColor pallete" oninput="onSetLineBgColor()">
                     </button>
-                    <button class="pallete-holder">
+                    <button title="change font color" class="pallete-holder">
                         <img class="btnImg" src="css/imgs/icons/letter-s.png">
-                        <input type="color" class="textColor pallete" onchange="onSetLineColor()">
+                        <input type="color" class="textColor pallete" oninput="onSetLineColor()">
                     </button>
-                    <!-- <input type="color" class="textBgColor pallete" onchange="onSetLineBgColor()">
-                    <input type="color" class="textColor pallete" onchange="onSetLineColor()"> -->
+
                 </div>
                 <div class="stickers">
-                    <button type="button" onclick="onRenderEms(-3)"><img class="btnImg"
+                    <button title="previous" type="button" onclick="onRenderEms(-3)"><img class="btnImg"
                             src="css/imgs/icons/before.png"></button>
                     <div class="emojies-display"></div>
-                    <button type="button" onclick="onRenderEms(3)"><img class="btnImg"
+                    <button title="next" type="button" onclick="onRenderEms(3)"><img class="btnImg"
                             src="css/imgs/icons/next.png"></button>
                 </div>
                 <div class="options">
-                    <button type="button" class="share" onclick="uploadImg()">Share</button>
+                    <button title="share to facebook" type="button" class="share" onclick="uploadImg()"><img src="css/imgs/icons/share.png">Share</button>
                     <button type="button" class="save" onclick="onSaveMeme()">Save</button>
                     <a class="download" href="#" onclick="downloadMeme(this)" download="my-meme.jpg">
-                        <button type="button" class="download-btn">Download</button>
+                        <button title="download" type="button" class="download-btn"><img src="css/imgs/icons/download.png">Download</button>
                     </a>
                 </div>
             </aside>
