added save meme func

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="options">
                     <button title="share to facebook" type="button" class="share" onclick="uploadImg()"><img src="css/imgs/icons/share.png">Share</button>
-                    <button type="button" class="save" onclick="onSaveMeme()">Save</button>
+                    <button title="save meme" type="button" class="save" onclick="onSaveMeme()"><img src="css/imgs/icons/diskette.png"></button>
                     <a class="download" href="#" onclick="downloadMeme(this)" download="my-meme.jpg">
                         <button title="download" type="button" class="download-btn"><img src="css/imgs/icons/download.png">Download</button>
                     </a>
